<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorGray"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_title"
                android:paddingTop="25dp"
                android:paddingBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/important_project_management"
        />
    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/rl_search"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin">

        <EditText
                android:id="@+id/et_list_search"
                style="@style/edit_search"
                android:drawableStart="@drawable/icon_search"
                android:drawablePadding="@dimen/normal_margin"
                android:hint="@string/project_search_hint"
                android:imeOptions="actionSearch"
                android:textColor="@color/text_dark_gray"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:singleLine="true"/>

    </RelativeLayout>


    <TextView
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/rl_search"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/set"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/icon_set"
            android:gravity="start|center"
            android:paddingTop="@dimen/medium_margin"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:drawablePadding="@dimen/dp_10"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/text_black"
            android:text="@string/important_project_set"
    />

    <RelativeLayout
            android:background="@color/white"
            android:id="@+id/rl_street"
            app:layout_constraintTop_toBottomOf="@+id/set"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:padding="@dimen/medium_margin"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_toEndOf="@+id/checkbox_street"
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/text_black"
                android:text="@string/street_name"
                android:gravity="center"
                android:layout_height="@dimen/button_height"/>
        <org.angmarch.views.NiceSpinner
                android:layout_below="@+id/checkbox_street"
                android:id="@+id/nice_spinner_stree"
                android:layout_width="match_parent"
                android:background="@color/white_gray"
                app:arrowDrawable="@drawable/icon_arrow"
                android:layout_height="@dimen/spinner_height"
                app:backgroundSelector="@drawable/spinner_selector"
        />
    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/rl_project"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/rl_street"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/medium_margin"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@+id/checkbox_project"
                android:text="@string/project_name"
                android:gravity="center"
                android:layout_height="@dimen/button_height"/>
        <org.angmarch.views.NiceSpinner
                android:layout_below="@+id/checkbox_project"
                android:id="@+id/nice_spinner_project"
                android:layout_width="match_parent"
                android:background="@color/white_gray"
                app:arrowDrawable="@drawable/icon_arrow"
                app:backgroundSelector="@drawable/spinner_selector"
                app:autoSizeMaxTextSize="@dimen/text_size_15"
                android:layout_height="@dimen/spinner_height"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/nice_spinner_project"
                android:layout_marginBottom="@dimen/medium_margin"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
